# retrogram

./: Cargo.toml  README.md
src/: input.rs  main.rs  project.rs
src/analysis/: block.rs  disasm.rs  dynamic.rs  error.rs  flow.rs  fork.rs  mod.rs  passes.rs  prerequisite.rs  queue.rs  reference.rs  requisite.rs  trace.rs  traits.rs
src/arch/: aarch32.rs  lr35902.rs  macros.rs  mod.rs  tests.rs  traits.rs  w65c816.rs
src/arch/aarch32/: context.rs  dataflow.rs  dis.rs  fork.rs  mod.rs  trace.rs  types.rs
src/arch/lr35902/: dis.rs  fork.rs  mod.rs  trace.rs  types.rs
src/arch/sm83/: context.rs  dataflow.rs  dis.rs  fork.rs  instr.rs  mod.rs  tests.rs  trace.rs  types.rs
src/asm/: annotator.rs  armips.rs  mod.rs  rgbds.rs  traits.rs
src/ast/: directive.rs  instr.rs  label.rs  line.rs  literal.rs  mod.rs  operand.rs  section.rs
src/cli/: backref.rs  common.rs  dis.rs  import.rs  main.rs  mod.rs  rename.rs  scan.rs  trace.rs  traits.rs
src/database/: db.rs  error.rs  mod.rs  projectdb.rs  rgbds.rs  tests.rs  traits.rs  type_erasure.rs
src/maths/: macros.rs  mod.rs  num24bit.rs  popcount.rs  tests.rs  traits.rs
src/memory/: behavior.rs  bss.rs  cptr.rs  endianness.rs  image.rs  mod.rs  region.rs  rombin.rs  tests.rs  traits.rs  tumbler.rs
src/platform/: agb.rs  gb.rs  mod.rs  sfc.rs  traits.rs
src/project/: datasource.rs  mod.rs  program.rs  repr.rs
src/queue/: actions.rs  command.rs  context.rs  mod.rs  process.rs  response.rs
src/reg/: mod.rs  state.rs  symbolic.rs  tests.rs  traits.rs
src/retrogram/: analysis.rs  ast.rs  cli.rs  input.rs  memory.rs  mod.rs  mynums.rs  project.rs  reg.rs  traits.rs
src/retrogram/analysis/: block.rs  database.rs  mod.rs  passes.rs  reference.rs  section.rs  trace.rs  traits.rs
src/retrogram/arch/: 65c816.rs  (+4 more)
src/tui/: builder.rs  context.rs  disasm_view.rs  jump.rs  label.rs  main.rs  menu.rs  mod.rs  pickers.rs  tabs.rs
(+63 files in other folders)
