[package]
name = "retrogram"
version = "0.1.0"
authors = ["David Wendt <dcrkid@yahoo.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
num-traits = "0.2.6"
clap = "2.33.0"
lazy_static = "1.4"
serde = { version="1.0.90", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3.0"

[dependencies.cursive]
version = "0.15.0"
default-features = false
features = ["crossterm-backend"]