[package]
name = "retrogram"
version = "0.1.0"
authors = ["David Wendt <dcrkid@yahoo.com>"]
edition = "2018"

[dependencies]
num = "0.2.0"
num-traits = "0.2.6"
clap = "2.33.0"
lazy_static = "1.4"
serde = { version="1.0.90", features = ["derive"] }
serde_json = "1.0"
serde_plain = "0.3.0"
rayon = "1.5.0"
backtrace = "0.3.55"
relative-path = { version="1.3.2", features = ["serde"] }
owning_ref = "0.4.1"

[dependencies.cursive]
git = "https://github.com/kmeisthax/cursive.git"
branch = "dialog-getters"
version = "^0.16.4-alpha.0"
default-features = false
features = ["crossterm-backend"]

[dependencies.cursive-tabs]
git="https://github.com/deinstapel/cursive-tabs.git"
branch="master"
version="^0.5.1-alpha.0"

[patch.crates-io.cursive_core]
git = "https://github.com/kmeisthax/cursive.git"
branch = "dialog-getters"
version = "^0.2.2-alpha.0"